--- a/src/components/Resume/Resume.css
+++ b/src/components/Resume/Resume.css
@@ -140,6 +140,7 @@
 
 .project-card-image-container {
   height: 96px;
+  width: 96px;
   overflow: hidden;
   position: relative;
   flex-shrink: 0;
